# colorized_mesh_display

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
.github/workflows/: main.yml
include/colorized_mesh_display/: colorized_mesh_display.h  colorized_mesh_visual.h  utils.h
msg/: ColorizedMesh.msg  ColorizedMeshStamped.msg
src/: colorized_mesh_display.cpp  colorized_mesh_display_test.cpp  colorized_mesh_visual.cpp  utils.cpp
