<?xml version="1.0"?>
<package format="2">
  <name>colorized_mesh_display</name>
  <version>0.0.0</version>
  <description>The colorized_mesh_display package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rviz</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
